name:               hakyll-awn
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base == 4.9.*
                  , hakyll == 4.8.*
                  , pandoc
                  , filepath
                  , bytestring
                  , time == 1.6.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
  Hs-source-dirs:   src/
