name:               hakyll-awn
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  other-modules:    Portuguese
  build-depends:    base
                  , containers
                  , text
                  , doctemplates
                  , hakyll
                  , pandoc
                  , filepath
                  , bytestring
                  , time
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
  Hs-source-dirs:   src/
